Clean up Jekyll files and consolidate to Docusaurus-only structure

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -51,5 +51,5 @@ import styles from './index.module.css';
 </div>
 
 <p className={styles.footer}>
-  We welcome contributions! Please read our <a href="/CONTRIBUTING" className={styles.link}>Contributing Guide</a> to get started.
+  We welcome contributions! Please read our <a href="./CONTRIBUTING" className={styles.link}>Contributing Guide</a> to get started.
 </p>
